chore(ci) trigger a Travis CI build to fix errors
The following error happened when triggering the last build:

cat: .ci/setup_env.sh: No such file or directory
cat: .travis.yml: No such file or directory

Fix the commit 599b61c, which failed with errors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,11 +48,11 @@ env:
 
 before_install:
   - git clone https://github.com/Kong/kong.git kong-ce
-  - source kong-ce/.ci/setup_env.sh
+  - cd kong-ce/
+  - sudo .ci/setup_env.sh
 
 install:
   - luarocks make
-  - cd kong-ce
   - make dev
   - cp -r ../spec/fixtures/prometheus spec/fixtures/
   - createuser --createdb kong
