chore(ci) fix luarocks installation error
Triggers a Travis CI build to fix the following error:

The program 'luarocks' is currently not installed. To run 'luarocks'
please ask your administrator to install the package 'luarocks'

The error was caused because of the commit 8a3e4e7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,9 @@ before_install:
   - sudo .ci/setup_env.sh
 
 install:
+  - cd ../
   - luarocks make
+  - cd kong-ce
   - make dev
   - cp -r ../spec/fixtures/prometheus spec/fixtures/
   - createuser --createdb kong
