chore(ci) use local `setup_env.sh` file
This commit is an attempt to solve the Travis CI build issue, where the
Kong installation is failing.

See this Travis CI job for details:
https://travis-ci.com/murillopaula/kong-upstream-by-header/jobs/194360194/

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ env:
     - DOWNLOAD_CACHE=$HOME/download-cache
     - INSTALL_CACHE=$HOME/install-cache
     - BUSTED_ARGS="-o gtest -v --exclude-tags=flaky,ipv6"
-    - PLUGIN_NAME=prometheus
+    - PLUGIN_NAME=upstream-by-header
     - KONG_TEST_PLUGINS=bundled,$PLUGIN_NAME
     - KONG_PLUGINS=bundled,$PLUGIN_NAME
 
@@ -48,11 +48,9 @@ env:
 
 before_install:
   - git clone https://github.com/Kong/kong.git kong-ce
-  - cd kong-ce/
-  - sudo .ci/setup_env.sh
+  - source setup_env.sh
 
 install:
-  - cd ../
   - luarocks make
   - cd kong-ce
   - make dev
