--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ services:
 env:
   global:
     - LUAROCKS=2.4.3
-    - OPENSSL=1.0.2n
+    - OPENSSL=1.1.1a
     - CASSANDRA_BASE=2.2.12
     - CASSANDRA_LATEST=3.9
     - OPENRESTY_BASE=1.13.6.2
