chore(ci) fix database creation error
This commit attempts to solve the following error message caused by the
Travis CI build [0]:

`createdb: database creation failed: ERROR:  database "travis" already
exists`

[0]
https://travis-ci.com/murillopaula/kong-upstream-by-header/jobs/194476430

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ install:
   - cd kong-ce
   - make dev
   - createuser --createdb kong
-  - createdb -U kong
+  - createdb -U kong kong_tests
 
 script:
   - bin/busted spec/
