chore(ci) run busted against the plugin spec
This commit fixes the issue brought by the commit 481de7a [0]: by
leaving the current `kong-ce` directory, we no longer have access to the
`bin/busted` binary to run our plugin tests. So we need to stay in the
current directory, but now we should run busted against our plugin's
specs.

[0]
https://github.com/murillopaula/kong-upstream-by-header/commit/481de7a7b874724c57db46c420dc64133cb02878

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,10 +55,9 @@ install:
   - make dev
   - createuser --createdb kong
   - createdb -U kong kong_tests
-  - cd ../
 
 script:
-  - bin/busted spec/
+  - bin/busted ../spec/
 
 cache:
   apt: true
